# heating_state

./: .gitignore  README.md  heating_state.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: cron.yaml  first_floor.yaml  ground_floor.yaml  poschodie_chodba.yaml  poschodie_detska.yaml  poschodie_kupelna.yaml  poschodie_mala_detska.yaml  poschodie_satnik.yaml  poschodie_spalna.yaml  prizemie_chodba.yaml  prizemie_hostovska.yaml  prizemie_kupelna.yaml  prizemie_obyv_kuchyna.yaml  suteren.yaml
heating_state/: auth.py  config.py  devices.py  gsheet.py  main.py  models.py
heating_state/api_clients/: gsheet.py  salus.py
