[tool.poetry]
name = "heating_state"
version = "0.1.0"
description = ""
authors = ["Michal Cyprian <m.cyprian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
gspread = "^5.3.0"
oauth2client = "^4.1.3"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
